src/test/ui/parser-recovery-1.stderr
error: this file contains an unclosed delimiter
  --> $DIR/parser-recovery-1.rs:16:54
   |
LL | trait Foo {
   |           - unclosed delimiter
LL |
LL |     fn bar() {
   |              - this delimiter might not be properly closed...
...
LL | }
   | - ...as it matches this but it has different indentation
...
LL | }
   |                                                      ^

error: aborting due to previous error

